# ceda_duckdb_superset

./: README.md  docker-compose.yml  pyproject.toml
ceda_duckdb/: profiles.yml
ceda_duckdb/models/staging/eencijfer/: _sources.yml  stg_eencijfer__croho.sql  stg_eencijfer__eencijfer.sql  stg_eencijfer__ho_inst.sql  stg_eencijfer__isat.sql  stg_eencijfer__postcodecijfers_2023.sql  stg_eencijfer__postcodecijfers_2024.sql  stg_eencijfer__vestnr_ho.sql
ceda_duckdb/models/staging/telbestanden/: _sources.yml  stg_analytics.sql
superset/: Dockerfile
