[tool]
[tool.poetry]
name = "ceda_analytics"
version = "2024.3.1"
homepage = "https://github.com/enningb/ceda_duckdb"
description = "Analytics tool for CEDA."
authors = ["Bram Enning <bramenning@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
typer = {extras = ["all"], version = "^0.9.0"}
pandas =">=2.0.0"
numpy = ">=1.26.1"
pyarrow= "^15.0.0"
case-converter = ">=1.1.0"
duckdb = "^0.10.1"
duckdb-engine ="^0.11.5"
psycopg2-binary ="^2.9.9"
sqlalchemy ="^2.0.29"
dbt-core ="^1.7.12"
dbt-duckdb="^1.7.3"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
tox = "^4.11.4"
virtualenv = "^20.25.0"
pip = "^23.3.2"
twine = "^4.0.2"
pre-commit =  "^3.6.0"
toml = "^0.10.2"
bump-my-version = "^0.15.4"
pandas-stubs = "^2.2"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py


[tool.mypy]
disable_error_code = ["attr-defined"]

[tool.bumpversion]
current_version = "2024.3.1"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\.(?P<dev>post)\\d+\\.dev\\d+)?"
message = "Version updated from {current_version} to {new_version}"

[tool.bumpversion.parts.dev]
values = ["release", "post"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
